syntax = "proto3";

package area;

option go_package = "internal/proto/area";

service AreaService {
  rpc GetArea(GetAreaRequest) returns (GetAreaResponse);
}

message GetAreaRequest {
  int64 id = 1;
}

message GetAreaResponse {
  Area area = 1;
}

message Area {
  int64 id = 1;
  string name = 2;
  string value = 3;
}
