syntax = "proto3";

package category;

option go_package = "internal/proto/category";

service CategoryService {
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
}

message GetCategoryRequest {
  int64 id = 1;
}

message GetCategoryResponse {
  Category category = 1;
}

message Category {
  int64 id = 1;
  int64 parent_id = 2;
  string name = 3;
}
